validating_webhook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: valcon
  name: valcon
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: valcon
status:
  loadBalancer: {}
