validating_webhook/manifests/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "backupnrestores.nyctonid.dev"
webhooks:
- name: "backupnrestores.nyctonid.dev"
  rules:
  - apiGroups:   ["nyctonid.dev"]
    apiVersions: ["v1alpha1"]
    operations:  ["CREATE"]
    resources:   ["backupnrestores"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "valcon"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZPakNDQXlLZ0F3SUJBZ0lVWjBkT3JNSTBlTjBoSWtYdlNDeXg5Umw3Y2dBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NkbUZzWTI5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJek1ESXlOREUzTlRndwpNVm9YRFRJME1ESXlOREUzTlRnd01Wb3dIVEViTUJrR0ExVUVBd3dTZG1Gc1kyOXVMbVJsWm1GMWJIUXVjM1pqCk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBMDM1YXBCVGg3M2pkWlcwV1crcnoKSzZGQWJ0MnV5WEtBZCtGaWNmcStrQm9GaFNTd0JSaklEeXBudWVrNGVVUDRJVGhtQi9DWUtpUGM0clB5YUpiTgpFYkx4ZzhqbytqN [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5

# validatingwebhookconfigurations
